# jnet-site

./: .env.example  .gitignore  .pre-commit-config.yaml  API_KEY_ARCHITECTURE.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  GITHUB_SECRETS_SETUP.md  README.md  SUPABASE_SETUP.md  api-service.out  commit-runner-setup.sh  commit_and_push.sh  docker-compose.prod.yml  docker-compose.yml  jnet-site.sln
services/api-service/: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  README.md  api-service.out  pyproject.toml  start_with_log.sh  test_api.py  test_catalog.py  test_setup.py  test_setup_fixed.py  test_stock_endpoints.py
services/api-service/app/: __init__.py  config.py  main.py  security.py
services/api-service/app/api/: dependencies.py  dependencies.pyi
services/api-service/app/api/v1/: router.py
services/api-service/app/core/: http_client.py
services/api-service/app/db/: supabase.py
services/api-service/app/middleware/: auth.py
services/api-service/app/models/: alert.py  analysis.py  audit.py  backtest.py  scan.py  stock.py  strategy.py  symbol.py  system_config.py
services/api-service/app/services/: audit_service.py  audit_service_v2.py  stock_data.py  system_config.py
services/api-service/app/utils/: redis_client.py
services/api-service/docs/: CONFIGURATION.md  FRONTEND_INTEGRATION.md
services/api-service/scripts/: deploy.sh  lint.sh  run_local.sh  setup.sh  test.sh
services/api-service/tests/: conftest.py
services/api-service/tests/unit/: test_health.py
services/stock-data-service/: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  GITHUB_SECRETS.md  README.md  main.py  pyproject.toml  stock-data.out
services/stock-data-service/app/: config.py  main.py  security.py
services/stock-data-service/app/config/: __init__.py  gcs_config.py  redis_config.py  settings.py
services/stock-data-service/app/core/: data_fetcher.py  exceptions.py  storage_manager.py
services/stock-data-service/app/indicators/: __init__.py  calculator.py  config.py  indicator_sets.py  models.py
services/stock-data-service/app/middleware/: auth.py
services/stock-data-service/app/models/: responses.py  stock.py  stock_data.py  summary.py
services/stock-data-service/app/services/: __init__.py  cache_keys.py  catalog_manager.py  download.py  gcs_storage.py  simple_cache.py  storage_paths.py  weekly_aggregator.py
services/stock-data-service/docs/: CHART_API_UPDATE.md  EXISTING_PROJECT_CONFIG.md  GCS_SETUP.md  PHASE1_COMPLETE.md  REDIS_SETUP.md
services/stock-data-service/scripts/: lint.sh  rebuild_catalog.py  setup-pre-commit.sh  setup_existing_project.sh  sync_weekly_data.py
services/stock-data-service/tests/: conftest.py  test_adx_indicator.py  test_adx_integration.py  test_api.py  test_data_fetcher.py  test_download.py  test_gap_filling.py  test_gap_filling_v2.py  test_gcs_storage.py  test_indicators.py  test_simple_cache.py  test_storage_manager.py  test_verify_adx.py  test_weekly_aggregator.py  test_weekly_integration.py  verify_adx_components.py  verify_no_gaps.py
(+285 files in other folders)
