[project]
name = "stock-data-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.35.0",
    "yfinance>=0.2.65",
    "google-cloud-storage>=2.10.0",
    "redis>=5.0.1",
    "hiredis>=2.2.3",
    "apscheduler>=3.10.4",
    "pandas-market-calendars>=4.3.1",
    "upstash-redis>=1.4.0",
    "ta>=0.11.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "mypy>=1.17.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.3.0",
]
